platform-engineering/governance/kyverno/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: disallow-privileged

spec:

  validationFailureAction: Enforce

  rules:

    - name: no-privileged

      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:

        message: "Privileged containers forbidden"

        pattern:

          spec:

            containers:

              - securityContext:

                  privileged: false
